--- a/style.css
+++ b/style.css
@@ -147,8 +147,8 @@ button:hover:not(.outline) {
 }
 
 .outline {
-    background: var(--primary-color);
-    color: var(--on-primary);
+    background: var(--background);
+    color: var(--on-background);
 }
 
 .outline:hover {
@@ -168,6 +168,7 @@ button:hover:not(.outline) {
 p {
     margin: 0;
     line-height: 25px;
+    color: whitesmoke;
 }
 
 /* Contact Section */
