--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ button:hover:not(.outline) {
 
 .primary {
     background: var(--primary-color);
-    color: var(--on-primary);
+    color: whitesmoke;
 }
 
 .secondary {
@@ -143,7 +143,7 @@ button:hover:not(.outline) {
 .secondary:hover,
 .outline.secondary:hover {
     background: var(--secondary_color);
-    color: var(--on-primary);
+    color: whitesmoke;
 }
 
 .outline {
@@ -153,7 +153,7 @@ button:hover:not(.outline) {
 
 .outline:hover {
     background: var(--primary-color);
-    color: var(--on-primary);
+    color: whitesmoke;
 }
 
 .text-box {
