--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --primary-color: rgb(255, 92, 92);
     --primary-variant: #ff2d2d;
     --secondary_color: #1b9999;
-    --on-primary: rgb(66, 66, 66);
+    --on-primary: rgb(250, 250, 250);
     --on-background-alt: rgba(66, 66, 66, 0.7);
     --background: rgb(255, 255, 255);
     --box-shadow: 0 5px 20px 1px rgba(0, 0, 0, 0.5);
@@ -132,7 +132,7 @@ button:hover:not(.outline) {
 
 .primary {
     background: var(--primary-color);
-    color: whitesmoke;
+    color: var(--on-primary);
 }
 
 .secondary {
@@ -143,7 +143,7 @@ button:hover:not(.outline) {
 .secondary:hover,
 .outline.secondary:hover {
     background: var(--secondary_color);
-    color: whitesmoke;
+    color: var(--on-primary);
 }
 
 .outline {
@@ -153,7 +153,7 @@ button:hover:not(.outline) {
 
 .outline:hover {
     background: var(--primary-color);
-    color: whitesmoke;
+    color: var(--on-primary);
 }
 
 .text-box {
@@ -168,7 +168,6 @@ button:hover:not(.outline) {
 p {
     margin: 0;
     line-height: 25px;
-    color: whitesmoke;
 }
 
 /* Contact Section */
